--- a/HireCraft/src/main/resources/application.properties
+++ b/HireCraft/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=HireCraft
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/HireCraft
+spring.datasource.username = postgres
+spring.datasource.password = postgrefega
+spring.jpa.show.sql = true
+spring.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+###create, drop, validate, update
+spring.jpa.hibernate.ddl-auto = update
